# superk_control

./: LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
scripts/: superk
superk_control/: superk.py  telegram.py
superk_control/cli/: daemon.py  superk.py
tests/: __init__.py  test_telegram.py
