[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "superk_control"
description = "NKT Photonics SuperK EVO control software"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "Miles Lucas", email = "mdlucas@hawaii.edu"}]
requires-python = ">=3.7,<3.10"
dependencies = [
    "docopt==0.6.*",
    "pyserial==3.*",
    "crc==1.*",
]
dynamic = ["version"]

[project.optional-dependencies]
test = ["pytest==7.*", "mock-serial==0.0.*", "pytest-cov==4.*"]

[project.scripts]
superk = "superk_control.cli.superk:main"

[tool.setuptools.dynamic]
version = {attr = "superk_control.__version__"}

[tool.pytest.ini_options]
log_cli = false
log_cli_level = "DEBUG"
log_cli_format = "[%(levelname)s] (%(name)-15s) %(message)s"

[tool.coverage.run]
source = ["superk_control"]